Use 'Integer.valueOf(deck.getId())' instead of new